<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RemoteControlActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_to_choose_device"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="false"
                android:backgroundTint="@color/toggleColorLight"/>

            <Button
                android:id="@+id/btnDisconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="false"
                android:backgroundTint="@color/toggleColorLight"
                android:enabled="false"/>

            <TextView
                android:id="@+id/lblSelectedDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/no_device_selected" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="80dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/traction_motor"
                    android:fontFamily="sans-serif-black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:checkedButton="@+id/rbTMOff"
                        android:id="@+id/toggleTM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/control_switch_background_border"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">
                        <RadioButton
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginStart="3dp"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:id="@+id/rbTMOff"
                            android:background="@drawable/control_switch_background_selector"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/off"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/control_switch_color_selector"/>

                        <RadioButton
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginEnd="3dp"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:id="@+id/rbTMOn"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/control_switch_background_selector"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/on"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/control_switch_color_selector" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:checkedButton="@+id/rbTMFWD"
                        android:id="@+id/toggleTMDir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/control_switch_background_border"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">
                        <RadioButton
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginStart="3dp"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:id="@+id/rbTMFWD"
                            android:background="@drawable/control_switch_background_selector"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/forward"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/control_switch_color_selector"/>

                        <RadioButton
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginEnd="3dp"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:id="@+id/rbTMBCK"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/control_switch_background_selector"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/backwards"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/control_switch_color_selector" />
                    </RadioGroup>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:fontFamily="sans-serif-medium" />

                <SeekBar
                    android:id="@+id/sbarSpeed"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:min="0"
                    android:progress="0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/water_pump"
                    android:fontFamily="sans-serif-black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:checkedButton="@+id/rbWPOff"
                        android:id="@+id/toggleWP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/control_switch_background_border"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">
                        <RadioButton
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginLeft="3dp"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:id="@+id/rbWPOff"
                            android:background="@drawable/control_switch_background_selector"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/off"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/control_switch_color_selector"/>

                        <RadioButton
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginRight="3dp"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:id="@+id/rbWPOn"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/control_switch_background_selector"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/on"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/control_switch_color_selector" />
                    </RadioGroup>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/brush"
                    android:fontFamily="sans-serif-black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:checkedButton="@+id/rbBOff"
                        android:id="@+id/toggleB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/control_switch_background_border"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">
                        <RadioButton
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginStart="3dp"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:id="@+id/rbBOff"
                            android:background="@drawable/control_switch_background_selector"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/off"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/control_switch_color_selector"/>

                        <RadioButton
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginEnd="3dp"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:id="@+id/rbBOn"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/control_switch_background_selector"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/on"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/control_switch_color_selector" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="80dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/okGreen"
                        android:id="@+id/whiskerBack"/>

                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_marginStart="-30dp"
                        android:layout_marginTop="-50dp"
                        android:layout_marginEnd="-30dp"
                        android:layout_marginBottom="-55dp"
                        android:src="@drawable/ic_device_simplified" />

                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@color/okGreen"
                        android:id="@+id/whiskerFront"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tank_level"
                    android:fontFamily="sans-serif-black"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pgBarTankLevel"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:max="100"
                    android:progress="50"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/automatic_mode"
                    android:fontFamily="sans-serif-black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:checkedButton="@+id/rbAMOff"
                        android:id="@+id/toggleAM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/control_switch_background_border"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">
                        <RadioButton
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginStart="3dp"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:id="@+id/rbAMOff"
                            android:background="@drawable/control_switch_background_selector"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/off"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/control_switch_color_selector"/>

                        <RadioButton
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginEnd="3dp"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:id="@+id/rbAMOn"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/control_switch_background_selector"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/on"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/control_switch_color_selector" />
                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>